// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Javascript/Collapsible Basic 1`] = `
<div>
  <ul
    className="collapsible expandable"
  >
    <li
      className=""
    >
      <div
        className="collapsible-header"
      >
        <i
          className="material-icons"
        >
          filter_drama
        </i>
        First
      </div>
      <div
        className="collapsible-body"
      >
        <span>
          Lorem ipsum dolor sit amet.
        </span>
      </div>
    </li>
    <li
      className=""
    >
      <div
        className="collapsible-header"
      >
        <i
          className="material-icons"
        >
          place
        </i>
        Second
      </div>
      <div
        className="collapsible-body"
      >
        <span>
          Lorem ipsum dolor sit amet.
        </span>
      </div>
    </li>
    <li
      className=""
    >
      <div
        className="collapsible-header"
      >
        <i
          className="material-icons"
        >
          whatshot
        </i>
        Third
      </div>
      <div
        className="collapsible-body"
      >
        <span>
          Lorem ipsum dolor sit amet.
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Javascript/Collapsible Collapsible Types 1`] = `
<div>
  <div>
    <ul
      className="collapsible expandable"
    >
      <li
        className="active"
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            filter_drama
          </i>
          First
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            place
          </i>
          Second
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            whatshot
          </i>
          Third
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
    </ul>
    <ul
      className="collapsible expandable"
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            filter_drama
          </i>
          First
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            place
          </i>
          Second
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            whatshot
          </i>
          Third
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
    </ul>
    <ul
      className="collapsible expandable"
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            filter_drama
          </i>
          First
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            place
          </i>
          Second
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            whatshot
          </i>
          Third
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
    </ul>
    <ul
      className="collapsible popout expandable"
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            filter_drama
          </i>
          First
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            place
          </i>
          Second
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
      <li
        className=""
      >
        <div
          className="collapsible-header"
        >
          <i
            className="material-icons"
          >
            whatshot
          </i>
          Third
        </div>
        <div
          className="collapsible-body"
        >
          <span>
            Lorem ipsum dolor sit amet.
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
